--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -11,6 +11,10 @@
     margin-bottom: 5px;
 }
 
+.jumbotron p {
+    margin-top: 5px;
+}
+
 .nft_heading {
     margin-top: 50px;
     margin-bottom: 10px;
